refactor: bug template 이모지 변경
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
-name: "\U0001F41E Bug"
+name: "🐞 Bug"
 description: '버그가 발생했나요?'
-labels: "\U0001F41E Bug"
+labels: "🐞 Bug"
 body:
   - type: textarea
     attributes:
