--- a/.github/ISSUE_TEMPLATE/refactor.yml
+++ b/.github/ISSUE_TEMPLATE/refactor.yml
@@ -1,6 +1,6 @@
-name: "\U0001F528 Refactor"
+name: "🔨 Refactor"
 description: '리팩터링을 해야할 부분이 있나요?'
-labels: "\U0001F528 Refactor"
+labels: "🔨 Refactor"
 body:
   - type: textarea
     attributes:
