--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,17 @@
-root = true
-
 [*]
 charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{kt,kts}]
-indent_style = space
-indent_size = 4
-end_of_line = lf
+[{*.kt,*.kts}]
+ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
+ij_kotlin_packages_to_use_import_on_demand = *    # <- 와일드카드 허용
+ij_kotlin_name_count_to_use_star_import = 20
+ij_kotlin_name_count_to_use_star_import_for_members = 20
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
 max_line_length = 120
 
-[*.{yml,yaml}]
-indent_size = 2
+
+[**Test.{kt,kts}]
+max_line_length = 999
