--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.kt,*.kts}]
+[*.{kt,kts}]
 ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
 ij_kotlin_packages_to_use_import_on_demand = *    # <- 와일드카드 허용
 ij_kotlin_name_count_to_use_star_import = 20
@@ -13,5 +13,5 @@ ij_kotlin_allow_trailing_comma_on_call_site = true
 max_line_length = 120
 
 
-[**Test.{kt,kts}]
+[*Test.{kt,kts}]
 max_line_length = 999
