--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -1,6 +1,6 @@
-name: "\U0001F64B Meeting"
+name: "\U0001F64B Suggestion"
 description: '팀원들과 논의할 내용이 있나요?'
-labels: "\U0001F64B Meeting"
+labels: "\U0001F64B Suggestion"
 body:
   - type: textarea
     attributes:
