--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,27 @@ spring:
         show_sql: true
         use_sql_comments: true
 
+  security:
+    jwt:
+      secret_key: ${JWT_SECRET_KEY}
+      expiration-time:
+        access-token: ${ACCESS_TOKEN_EXPIRATION_TIME}
+        refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: ${KAKAO_REDIRECT_URI}
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+            scope:
+              - account_email
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
