feat: Spring Security 기반 카카오 OAuth 연동 (#30)
* chore: Spring Security 의존성 추가

* feat: SecurityConfig 기본 필터 구성

* refactor: 조직 룰에 의거하여 테이블 명을 복수형으로 변경

* feat: OAuth 클라이언트 연동 Security 필터체인 구성

* feat: ktlint 적용

* fix: 코드 컨벤션 준수

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,14 @@ spring:
     hibernate:
       ddl-auto: update
 
+  security:
+    login-url: ${LOGIN_URL:/login}
+    redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    cookie:
+      domain: ${COOKIE_DOMAIN:localhost}
+      secure: ${COOKIE_SECURE:true}
+      http-only: ${COOKIE_HTTP_ONLY:false}
+
 session:
   attendance:
     start-hour: 14
