--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -97,7 +97,7 @@ jobs:
           script: |
             cd ~
             chmod +x deploy.sh
-            sh deploy.sh ${{ env.IMAGE_TAG }}
+            ./deploy.sh ${{ env.IMAGE_TAG }}
 
       - name: "Slack으로 배포 성공 알림을 알린다."
         if: success()
