fix: 배포 환경에 맞게 설정 변경 (#37)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ management:
     web:
       exposure:
         include: health
-      base-path: /dpmcore-actuator
+      base-path: /actuator
     jmx:
       exposure:
         exclude: "*"
