feat: CD 및 인프라 구축 (#38)
* feat: 프로덕션 CD 스크립트 추가 (#37)

* feat: 개발 CD 스크립트 추가 (#37)

* feat: 운영 CD 스크립트 수정 (#37)

* feat: Spring actuator 추가 (#37)

* feat: Spring 프로필 별 yml 분리 (#37)

* refactor: deploy 쉘 스크립트 이미지 태그 추가 (#37)

* refactor: 코드 리뷰 반영 (#37)

* refactor: CD deploy job에 jdk 설정 step 추가 (#37)

* fix: 쉘 스크립트 실행 방식 수정 (#37)

* fix: 배포 step에서 docker login 추가 (#37)

* fix: 배포 환경에 맞게 설정 변경 (#37)

* fix: 배포 환경에 맞게 설정 변경 (#37)

* fix: 개발 서버 변경사항 반영 (#37)

* remove: CD 성공 Slack 알림 제거 (#37)

* chore: 코드 리뷰 반영 (#37)

* chore: CD 스크립트 변경 (#37)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,4 +32,25 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+    login-url: ${LOGIN_URL:/login}
+    redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    cookie:
+      domain: ${COOKIE_DOMAIN:localhost}
+      secure: ${COOKIE_SECURE:true}
+      http-only: ${COOKIE_HTTP_ONLY:false}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /actuator
+    jmx:
+      exposure:
+        exclude: "*"
+    access:
+      default: none
+
+  endpoint:
+    health:
+      enabled: true
