--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,7 @@ spring:
             user-name-attribute: id
     login-url: ${LOGIN_URL:/login}
     redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
     cookie:
       domain: ${COOKIE_DOMAIN:localhost}
       secure: ${COOKIE_SECURE:true}
