feat: 멤버별 출석 리스트 조회 API 구현 (#35)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,4 +61,4 @@ management:
       enabled: true
 logging:
   level:
-    org.jooq.tools.LoggerListener: INFO
+    org.jooq.tools.LoggerListener: DEBUG
