--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,16 @@ spring:
       expiration-time:
         access-token: ${ACCESS_TOKEN_EXPIRATION_TIME}
         refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
+
+    login-url: ${LOGIN_URL:/login}
+    redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
+
+    cookie:
+      domain: ${COOKIE_DOMAIN:localhost}
+      secure: ${COOKIE_SECURE:true}
+      http-only: ${COOKIE_HTTP_ONLY:false}
+
     oauth2:
       client:
         registration:
@@ -32,12 +42,6 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-    login-url: ${LOGIN_URL:/login}
-    redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
-    cookie:
-      domain: ${COOKIE_DOMAIN:localhost}
-      secure: ${COOKIE_SECURE:true}
-      http-only: ${COOKIE_HTTP_ONLY:false}
 
 management:
   endpoints:
