--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -79,9 +79,9 @@ jobs:
       - name: "Jib을 사용하여 Docker 이미지를 빌드 후 Dockerhub에 푸시한다."
         run: |
           ./gradlew jib \
-            -Djib.to.auth.username=${{ env.DOCKER_USERNAME }} \
-            -Djib.to.auth.password=${{ env.DOCKER_PASSWORD }} \
-            -Djib.to.image=${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}:${{ env.IMAGE_TAG }} \
+            -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
+            -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} \
+            -Djib.to.image=${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:${{ env.IMAGE_TAG }} \
             -Djib.to.tags=${{ env.IMAGE_TAG }} \
             -DDB_HOST=${{ secrets.DEV_DB_HOST }} \
             -DDB_PORT=${{ secrets.DEV_DB_PORT }} \
@@ -89,9 +89,6 @@ jobs:
             -DDB_USERNAME=${{ secrets.DEV_DB_USERNAME }} \
             -DDB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} \
         env:
-          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
-          DOCKER_REPOSITORY: ${{ env.DOCKER_REPOSITORY }}
-          DOCKER_PASSWORD: ${{ env.DOCKER_PASSWORD }}
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
 
       - name: "서버에 배포한다."
@@ -101,7 +98,7 @@ jobs:
           username: ${{ secrets.DEV_SERVER_USERNAME }}
           key: ${{ secrets.DEV_SERVER_SSH_KEY }}
           script: |
-            docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }}
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             cd ~
             chmod +x deploy.sh
             ./deploy.sh ${{ env.IMAGE_TAG }}
