refactor: pull request 타이틀 메시지에 포함

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           args: |
             ❌ **CI 도중 문제가 발생했습니다.(테스트)**
-            브랜치: `${{ github.head_ref }}`
-            커밋 메시지: `${{ github.event.head_commit.message }}`
+            branch : `${{ github.head_ref }}`
+            pull-request : `${{ github.event.pull_request.title }}`
             [🔗 작업 요약 보기](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
