--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: "Kotlin 소스를 컴파일한다."
         run: ./gradlew compileKotlin --configuration-cache --build-cache
 
-      - name: "Discord로 빌드 실패를 알린다"
+      - name: "Discord로 빌드 실패를 알린다."
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
         env:
@@ -105,7 +105,7 @@ jobs:
               --update-monitor 30s \
               core-service
 
-      - name: "Discord로 Production 배포 실패를 알린다"
+      - name: "Discord로 Production 배포 실패를 알린다."
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
         env:
