--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "Kotlin 소스를 컴파일한다."
         run: ./gradlew compileKotlin --configuration-cache --build-cache
 
-      - name: "Discord로 빌드 실패를 알린다"
+      - name: "Discord로 빌드 실패를 알린다."
         if: failure()
         uses: Ilshidur/action-discord@0.3.2
         env:
