--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           args: |
             ❌ **컴파일 도중 문제가 발생했습니다.**
+            actor : `@${{ github.actor }}`
             branch : `${{ github.head_ref }}`
             pull-request : `${{ github.event.pull_request.title }}`
             [🔗 작업 요약 보기](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
@@ -102,6 +103,7 @@ jobs:
         with:
           args: |
             ❌ **`Development` 배포 도중 문제가 발생했습니다.**
+            actor : `@${{ github.actor }}`
             branch : `${{ github.head_ref }}`
             pull-request : `${{ github.event.pull_request.title }}`
             [🔗 작업 요약 보기](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
