refactor: 출석기준 환경변수로 주입받도록 변경 (#35)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,3 +66,12 @@ management:
 logging:
   level:
     org.jooq.tools.LoggerListener: DEBUG
+
+session:
+  attendance:
+    start-hour: 14
+
+attendance:
+  graduation:
+    impossible-threshold: 4
+    at-risk-threshold: 3
