--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: optional:file:.env[.properties]
   jpa:
     hibernate:
       ddl-auto: validate
@@ -8,6 +10,9 @@ spring:
         format_sql: true
         show_sql: true
         use_sql_comments: true
+
+  jooq:
+    sql-dialect: mysql
 
   security:
     jwt:
@@ -58,3 +63,15 @@ management:
   endpoint:
     health:
       enabled: true
+logging:
+  level:
+    org.jooq.tools.LoggerListener: DEBUG
+
+session:
+  attendance:
+    start-hour: 14
+
+attendance:
+  graduation:
+    impossible-threshold: 4
+    at-risk-threshold: 3
