refactor: 어드민 권한 여부에 따라 분기처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
     login-url: ${LOGIN_URL:/login}
     logout-url: ${LOGOUT_URL:/logout}
     redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    admin-redirect-url: ${ADMIN_REDIRECT_URL:/swagger-ui/index.html}
     restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
 
     cookie:
