--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,15 +56,11 @@ management:
       exposure:
         include: health
       base-path: /actuator
-    jmx:
-      exposure:
-        exclude: "*"
     access:
       default: none
-
   endpoint:
     health:
-      enabled: true
+      access: read_only
 logging:
   level:
     org.jooq.tools.LoggerListener: DEBUG
