feat: 세션 생성 이벤트 발행하여 출석부 생성 구현 (#71)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,6 +65,9 @@ logging:
   level:
     org.jooq.tools.LoggerListener: DEBUG
 
+cohort:
+  value: 17
+
 session:
   attendance:
     start-hour: 14
