--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,13 +66,13 @@ logging:
     org.jooq.tools.LoggerListener: DEBUG
 
 cohort:
-  value: 17
+  value: ${COHORT_VALUE:17}
 
 session:
   attendance:
-    start-hour: 14
+    start-hour: ${SESSION_ATTENDANCE_START_HOUR:14}
 
 attendance:
   graduation:
-    impossible-threshold: 4
-    at-risk-threshold: 3
+    impossible-threshold: ${ATTENDANCE_GRADUATION_IMPOSSIBLE_THRESHOLD:4}
+    at-risk-threshold: ${ATTENDANCE_GRADUATION_AT_RISK_THRESHOLD:3}
