fix: 멤버 로그인 관련 1차 이슈 수정 (#96)
* fix: 리다이렉트 시 권한 파라미터 제공

* fix: 어드민 client로 접근 시 client로 리다이렉션

* fix: client 붙여서 리다이렉트 대상 명시화

* fix: 닉네임 받아오도록 스코프 수정

* fix: 스프링 시큐리티 기본 페이지로 리다이렉트 되지 않도록 수정

* fix: 로컬 환경변수 분기 contains 로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,8 @@ spring:
         access-token: ${ACCESS_TOKEN_EXPIRATION_TIME}
         refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
 
-    login-url: ${LOGIN_URL:/login}
     logout-url: ${LOGOUT_URL:/logout}
-    redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    client-redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
     admin-redirect-url: ${ADMIN_REDIRECT_URL:/swagger-ui/index.html}
     restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
 
@@ -43,6 +42,7 @@ spring:
             client-authentication-method: client_secret_post
             scope:
               - account_email
+              - profile_nickname
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
