--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
 
     logout-url: ${LOGOUT_URL:/logout}
-    client-redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
+    core-redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
     admin-redirect-url: ${ADMIN_REDIRECT_URL:/swagger-ui/index.html}
     restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
 
