feat: composition 패턴 적용하여 리디렉션 분기 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,9 +22,12 @@ spring:
         refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
 
     logout-url: ${LOGOUT_URL:/logout}
-    core-redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
-    admin-redirect-url: ${ADMIN_REDIRECT_URL:/swagger-ui/index.html}
-    restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
+
+    redirect:
+      swagger-url: ${SWAGGER_URL:http://localhost:8080/swagger-ui/index.html}
+      core-redirect-url: ${REDIRECT_URL}
+      admin-redirect-url: ${ADMIN_REDIRECT_URL}
+      restricted-redirect-url: ${RESTRICTED_REDIRECT_URL}
 
     cookie:
       domain: ${COOKIE_DOMAIN:localhost}
