--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,3 +79,17 @@ attendance:
   graduation:
     impossible-threshold: ${ATTENDANCE_GRADUATION_IMPOSSIBLE_THRESHOLD:4}
     at-risk-threshold: ${ATTENDANCE_GRADUATION_AT_RISK_THRESHOLD:3}
+
+cors:
+  allowed-origins:
+    - https://localhost:3000
+    - https://local.depromeet-core.shop
+    - https://local-core.depromeet-core.shop:3010
+    - https://local-admin.depromeet-core.shop:3020
+    - https://client.depromeet-core.shop
+    - https://admin.depromeet-core.shop
+    - https://api.depromeet-core.shop
+    - https://core.depromeet.com
+    - https://admin.depromeet.com
+    - https://api.depromeet.com
+
