--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -22,9 +22,12 @@ spring:
         refresh-token: ${REFRESH_TOKEN_EXPIRATION_TIME}
 
     logout-url: ${LOGOUT_URL:/logout}
-    core-redirect-url: ${REDIRECT_URL:/swagger-ui/index.html}
-    admin-redirect-url: ${ADMIN_REDIRECT_URL:/swagger-ui/index.html}
-    restricted-redirect-url: ${RESTRICTED_REDIRECT_URL:/swagger-ui/index.html}
+
+    redirect:
+      swagger-url: ${SWAGGER_URL:http://localhost:8080/swagger-ui/index.html}
+      core-redirect-url: ${REDIRECT_URL}
+      admin-redirect-url: ${ADMIN_REDIRECT_URL}
+      restricted-redirect-url: ${RESTRICTED_REDIRECT_URL}
 
     cookie:
       domain: ${COOKIE_DOMAIN:localhost}
@@ -76,3 +79,16 @@ attendance:
   graduation:
     impossible-threshold: ${ATTENDANCE_GRADUATION_IMPOSSIBLE_THRESHOLD:4}
     at-risk-threshold: ${ATTENDANCE_GRADUATION_AT_RISK_THRESHOLD:3}
+
+cors:
+  allowed-origins:
+    - https://localhost:3000
+    - https://local.depromeet-core.shop
+    - https://local-core.depromeet-core.shop:3010
+    - https://local-admin.depromeet-core.shop:3020
+    - https://client.depromeet-core.shop
+    - https://admin.depromeet-core.shop
+    - https://api.depromeet-core.shop
+    - https://core.depromeet.com
+    - https://admin.depromeet.com
+    - https://api.depromeet.com
