refactor: jooq 쿼리 생성 문법 오류 픽스

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -67,6 +67,7 @@ management:
 logging:
   level:
     org.jooq.tools.LoggerListener: DEBUG
+    org.springframework.jdbc: DEBUG
 
 cohort:
   value: ${COHORT_VALUE:17}
