--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -41,6 +41,7 @@ jobs:
             [🔗 작업 요약 보기](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
   deploy:
+
     needs:
       - compile
     runs-on: ubuntu-22.04
@@ -50,6 +51,7 @@ jobs:
       DOCKER_REPOSITORY: ${{ secrets.DOCKER_REPOSITORY }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       IMAGE_TAG: dev-${{ github.sha }}
+      APPLE_PRIVATE_KEY_PATH: ${{ secrets.APPLE_DEV__PRIVATE_KEY_PATH }}
 
     steps:
       - name: "레포지토리를 체크아웃한다."
@@ -69,6 +71,12 @@ jobs:
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
+
+      - name: "Apple p8 key 파일 생성"
+        run: |
+          mkdir -p secrets
+          echo "${{ secrets.APPLE_P8_KEY }}" > secrets/AuthKey.p8
+          chmod 600 secrets/AuthKey.p8
 
       - name: "Jib을 사용하여 Docker 이미지를 빌드 후 Dockerhub에 푸시한다."
         run: |
