--- a/application/src/main/resources/application-dev.yml
+++ b/application/src/main/resources/application-dev.yml
@@ -11,3 +11,9 @@ spring:
 logging:
   level:
     org.springframework.orm.jpa: INFO
+apple:
+  client-id: ${DEV_APPLE_CLIENT_ID}
+  key-id: ${DEV_APPLE_KEY_ID}
+  team-id: ${DEV_APPLE_TEAM_ID}
+  private-key-path: ${DEV_APPLE_PRIVATE_KEY_PATH}
+  redirect-uri: ${DEV_APPLE_REDIRECT_URL}
