--- a/application/src/main/resources/application-local.yml
+++ b/application/src/main/resources/application-local.yml
@@ -7,6 +7,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 server:
   port: 8080
+apple:
+  client-id: ${LOCAL_APPLE_CLIENT_ID}
+  key-id: ${LOCAL_APPLE_KEY_ID}
+  team-id: ${LOCAL_APPLE_TEAM_ID}
+  private-key-path: ${LOCAL_APPLE_PRIVATE_KEY_PATH}
+  redirect-uri: ${LOCAL_APPLE_REDIRECT_URL}
