--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -46,12 +46,26 @@ spring:
             scope:
               - account_email
               - profile_nickname
+          apple:
+            client-id: ${apple.client-id}
+            client-secret: ${apple.client-secret}
+            authorization-grant-type: authorization_code
+            redirect-uri: ${APPLE_REDIRECT_URL}
+            scope:
+              - name
+              - email
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+          apple:
+            authorization-uri: https://appleid.apple.com/auth/authorize
+            token-uri: https://appleid.apple.com/auth/token
+            jwk-set-uri: https://appleid.apple.com/auth/keys
+            user-name-attribute: sub
+
 
 management:
   endpoints:
