--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -52,7 +52,6 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       IMAGE_TAG: dev-${{ github.sha }}
       APPLE_PRIVATE_KEY_PATH: ${{ secrets.APPLE_DEV__PRIVATE_KEY_PATH }}
-
     steps:
       - name: "레포지토리를 체크아웃한다."
         uses: actions/checkout@v4
@@ -74,9 +73,8 @@ jobs:
 
       - name: "Apple p8 key 파일 생성"
         run: |
-          mkdir -p secrets
-          echo "${{ secrets.APPLE_P8_KEY }}" > secrets/AuthKey.p8
-          chmod 600 secrets/AuthKey.p8
+          mkdir -p application/secrets
+          echo "${{ secrets.APPLE_P8_KEY }}" > application/secrets/AuthKey.p8
 
       - name: "Jib을 사용하여 Docker 이미지를 빌드 후 Dockerhub에 푸시한다."
         run: |
