--- a/application/src/main/resources/application-dev.yml
+++ b/application/src/main/resources/application-dev.yml
@@ -15,5 +15,5 @@ apple:
   client-id: ${DEV_APPLE_CLIENT_ID}
   key-id: ${DEV_APPLE_KEY_ID}
   team-id: ${DEV_APPLE_TEAM_ID}
-  private-key-path: ${DEV_APPLE_PRIVATE_KEY_PATH}
+  private-key: ${DEV_APPLE_PRIVATE_KEY}
   redirect-uri: ${DEV_APPLE_REDIRECT_URL}
