--- a/application/src/main/resources/application-prod.yml
+++ b/application/src/main/resources/application-prod.yml
@@ -15,5 +15,5 @@ apple:
   client-id: ${PROD_APPLE_CLIENT_ID}
   key-id: ${PROD_APPLE_KEY_ID}
   team-id: ${PROD_APPLE_TEAM_ID}
-  private-key-path: ${PROD_APPLE_PRIVATE_KEY_PATH}
+  private-key: ${PROD_APPLE_PRIVATE_KEY}
   redirect-uri: ${PROD_APPLE_REDIRECT_URL}
