--- a/application/src/main/resources/application-dev.yml
+++ b/application/src/main/resources/application-dev.yml
@@ -7,6 +7,13 @@ spring:
     username: ${DEV_DB_USERNAME}
     password: ${DEV_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    oauth2:
+      client:
+        registration:
+           apple:
+             client-id: ${DEV_APPLE_CLIENT_ID}
+             redirect-uri: ${DEV_APPLE_REDIRECT_URI}
 
 logging:
   level:
