--- a/application/src/main/resources/application-local.yml
+++ b/application/src/main/resources/application-local.yml
@@ -4,7 +4,13 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  security:
+    oauth2:
+      client:
+        registration:
+          apple:
+            client-id: ${LOCAL_APPLE_CLIENT_ID}
+            redirect-uri: ${LOCAL_APPLE_REDIRECT_URI}
   jpa:
     hibernate:
       ddl-auto: validate
