--- a/application/src/main/resources/application-prod.yml
+++ b/application/src/main/resources/application-prod.yml
@@ -7,7 +7,13 @@ spring:
     username: ${PROD_DB_USERNAME}
     password: ${PROD_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  security:
+    oauth2:
+      client:
+        registration:
+          apple:
+            client-id: ${PROD_APPLE_CLIENT_ID}
+            redirect-uri: ${PROD_APPLE_REDIRECT_URI}
 logging:
   level:
     org.springframework.orm.jpa: INFO
