[refactor]: distribute environment apple client parameter
* [feat]: apple oauth 2.0 login / DRAFT_FOR_DEV
refactor CD flow and parameter

* fix: resolve Jib build failure caused by secrets path mismatch

- Align GitHub Actions secret generation path with Jib extraDirectories configuration
- Ensure Apple AuthKey.p8 is correctly included in container image
- Fix CI failure after Apple OAuth feature merge

* fix: resolve Jib build failure caused by build workspace directory mismatch

* refactor: change Resource File of p8 authentication file to String type

* [refactor]: change apple client parameter style

* [refactor]: distribute environment apple client parameter

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -47,10 +47,8 @@ spring:
               - account_email
               - profile_nickname
           apple:
-            client-id: ${apple.client-id}
-            client-secret: ${apple.client-secret}
+            client-authentication-method: post
             authorization-grant-type: authorization_code
-            redirect-uri: ${APPLE_REDIRECT_URL}
             scope:
               - name
               - email
