[refactor]: change rediredt url to uri

--- a/application/src/main/resources/application-dev.yml
+++ b/application/src/main/resources/application-dev.yml
@@ -23,4 +23,4 @@ apple:
   key-id: ${DEV_APPLE_KEY_ID}
   team-id: ${DEV_APPLE_TEAM_ID}
   private-key: ${DEV_APPLE_PRIVATE_KEY}
-  redirect-uri: ${DEV_APPLE_REDIRECT_URL}
+  redirect-uri: ${DEV_APPLE_REDIRECT_URI}
