--- a/application/src/main/resources/application-prod.yml
+++ b/application/src/main/resources/application-prod.yml
@@ -22,4 +22,4 @@ apple:
   key-id: ${PROD_APPLE_KEY_ID}
   team-id: ${PROD_APPLE_TEAM_ID}
   private-key: ${PROD_APPLE_PRIVATE_KEY}
-  redirect-uri: ${PROD_APPLE_REDIRECT_URL}
+  redirect-uri: ${PROD_APPLE_REDIRECT_URI}
