--- a/application/src/main/resources/application-local.yml
+++ b/application/src/main/resources/application-local.yml
@@ -37,7 +37,7 @@ spring:
             user-name-attribute: sub
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 server:
   port: 8080
 apple:
